refactor: 주문 생성,취소 코드 리팩토링 (mentee/mentee_2023.01/team/g-market/gabia_b_shop_backend!25)
* refactor: merge conflict 해결

* refactor: oi -> OrderItemdto로 변수명 명시화

* refactor: final 키워드 적용

* refactor: list size 검증 validation 메서드로 분리

* refactor: optionId->itemOptionId로 변수명 변경

* refactor: final 키워드 추가 및 private 메소드로 변경

* feat: 주문 생성dto 유효성 검사 추가

* chore: logging SQL 설정 환경변수로 변경

* chore: logging SQL 설정 추가

* feat: ItemStatus, 재고 유효성 검사 추가

* test: 주문 생성실패 테스트 코드 추가

* refactor: 주문 생성 로직 Query DB IO 조회 성능 개선

* feat: ITEM_ITEMOPTION_NOT_FOUND_EXCEPTION 에러 메세지 추가

* refactor: Options->ItemOption 엔티티명 변경 테이블 생성명 수정

* feat: merge 변경점(Options->ItemOption) 쿼리 반영 commit

* feat: merge 변경점(Orders->order, Options->ItemOption) 반영 commit

* test: Option 테스트 데이터 추가 및 재고 감소 테스트 코드 추가

* refactor: 주문 생성 시 findBy 쿼리 성능 개선

* feat: 주문량이 음수값일 경우 validation 추가

* refactor: Exception validation Entity단에서 Service단으로 이동

* feat: 모호한 id 변수 명시화(id->itemId로 수정)

* feat: Order 엔티티 변수명 OrderItems에서 OrderItemList로 변경

* test: 초기 DB 데이터 option 데이터 추가