@@ -9,23 +9,25 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.gabia.bshop.dto.OrderItemDto;
 import com.gabia.bshop.dto.request.OrderCreateRequestDto;
 import com.gabia.bshop.dto.request.OrderInfoSearchRequest;
 import com.gabia.bshop.dto.response.OrderCreateResponseDto;
 import com.gabia.bshop.dto.response.OrderInfoPageResponse;
 import com.gabia.bshop.dto.response.OrderInfoSingleResponse;
-import com.gabia.bshop.entity.Item;
 import com.gabia.bshop.entity.ItemImage;
 import com.gabia.bshop.entity.ItemOption;
 import com.gabia.bshop.entity.Member;
 import com.gabia.bshop.entity.Order;
 import com.gabia.bshop.entity.OrderItem;
+import com.gabia.bshop.entity.enumtype.ItemStatus;
+import com.gabia.bshop.entity.enumtype.OrderStatus;
+import com.gabia.bshop.exception.ConflictException;
 import com.gabia.bshop.exception.NotFoundException;
 import com.gabia.bshop.mapper.OrderInfoMapper;
 import com.gabia.bshop.mapper.OrderMapper;
 import com.gabia.bshop.repository.ItemImageRepository;
 import com.gabia.bshop.repository.ItemOptionRepository;
-import com.gabia.bshop.repository.ItemRepository;
 import com.gabia.bshop.repository.MemberRepository;
 import com.gabia.bshop.repository.OrderItemRepository;
 import com.gabia.bshop.repository.OrderRepository;
@@ -35,12 +37,12 @@ import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @RequiredArgsConstructor
+@Transactional
 @Service
 public class OrderService {
 
 	private final OrderRepository orderRepository;
 	private final OrderItemRepository orderItemRepository;
-	private final ItemRepository itemRepository;
 	private final ItemImageRepository itemImageRepository;
 	private final MemberRepository memberRepository;
 	private final ItemOptionRepository itemOptionRepository;
@@ -82,35 +84,46 @@ public class OrderService {
 			itemImagesWithItem);
 	}
 
-	/**
-	 * 주문 생성
-	 */
+	//TODO: 인증 로직 추가 필요
 	public OrderCreateResponseDto createOrder(final OrderCreateRequestDto orderCreateRequestDto) {
 		findMemberById(orderCreateRequestDto.memberId());
-		Order order = OrderMapper.INSTANCE.ordersCreateDtoToEntity(orderCreateRequestDto);
+		final Order order = OrderMapper.INSTANCE.ordersCreateDtoToEntity(orderCreateRequestDto);
 
-		List<OrderItem> orderItemEntityList = orderCreateRequestDto.orderItemDtoList()
-			.stream()
-			.map(oi -> {
-				Item item = itemRepository.findById(oi.id()).get();
-				ItemOption itemOption = itemOptionRepository.findByItem_Id(oi.id());
-				return OrderItem.createOrderItem(item, itemOption, order, oi.orderCount());
-			})
-			.collect(Collectors.toList());
+		//DB에서 OptionItem 값 한번에 조회
+		final List<ItemOption> findAllItemOptionList = itemOptionRepository.findWithItemByItemIdsAndItemOptionIds(
+			orderCreateRequestDto.orderItemDtoList().stream().map(OrderItemDto::itemId).toList(),
+			orderCreateRequestDto.orderItemDtoList().stream().map(OrderItemDto::itemOptionId).toList()
+		);
 
-		order.createOrder(orderItemEntityList);
+		//유효한 ItemOption값 인지 검사
+		final List<OrderItemDto> validItemOptionList = orderCreateRequestDto.orderItemDtoList().stream()
+			.filter(oi -> findAllItemOptionList.stream().anyMatch(oi::equalsIds))
+			.toList();
 
+		//요청 List와 검증한 List size가 일치하지 않다면
+		isEqualListSize(orderCreateRequestDto, validItemOptionList);
+
+		final List<OrderItem> orderItemList = validItemOptionList.stream().map(orderItemDto -> {
+			final ItemOption itemOption = findAllItemOptionList.stream()
+				.filter(orderItemDto::equalsIds)
+				.findFirst()
+				.orElseThrow();
+			validateItemStatus(itemOption);
+			validateStockQuantity(itemOption, orderItemDto.orderCount());
+
+			return OrderItem.createOrderItem(itemOption, order, orderItemDto.orderCount());
+		}).toList();
+
+		order.createOrder(orderItemList);
 		orderRepository.save(order);
 
 		return OrderMapper.INSTANCE.ordersCreateResponseDto(order);
 	}
 
-	/**
-	 * 주문 취소(제거)
-	 */
 	public void cancelOrder(final Long id) {
-		Order order = findOrderById(id);
+		final Order order = findOrderById(id);
 
+		validateOrderStatus(order);
 		order.cancel();
 	}
 
@@ -130,5 +143,33 @@ public class OrderService {
 			.collect(Collectors.toList()));
 	}
 
-}
+	private void validateItemStatus(final ItemOption itemOption) {
+		if (itemOption.getItem().getItemStatus() != ItemStatus.PUBLIC) {
+			//TODO: 어떤 아이템이 판매되지 않는지 RETURN
+			throw new ConflictException(ITEM_STATUS_NOT_PUBLIC_EXCEPTION);
+		}
+	}
 
+	private void validateStockQuantity(final ItemOption itemOption, final int orderCount) {
+		final int restStock = itemOption.getStockQuantity() - orderCount;
+		if (restStock <= 0) {
+			throw new ConflictException(ITEM_OPTION_OUT_OF_STOCK_EXCEPTION, itemOption.getStockQuantity());
+		}
+	}
+
+	private void validateOrderStatus(final Order order) {
+		if (order.getStatus() == OrderStatus.COMPLETED) {
+			throw new ConflictException(ORDER_STATUS_ALREADY_COMPLETED_EXCEPTION);
+		} else if (order.getStatus() == OrderStatus.CANCELLED) {
+			throw new ConflictException(ORDER_STATUS_ALREADY_CANCELLED_EXCEPTION);
+		}
+	}
+
+	private boolean isEqualListSize(final OrderCreateRequestDto orderCreateRequestDto,
+		final List<OrderItemDto> validItemOptionList) {
+		if (orderCreateRequestDto.orderItemDtoList().size() != validItemOptionList.size()) {
+			throw new ConflictException(ITEM_ITEMOPTION_NOT_FOUND_EXCEPTION);
+		}
+		return true;
+	}
+}
